<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content" android:padding="8dp">
    <RadioGroup
        android:id="@+id/favorite_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/favorite_type_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_type_0" />
        <RadioButton
            android:id="@+id/favorite_type_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_type_1" />
        <RadioButton
            android:id="@+id/favorite_type_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_type_2"
            android:checked="true" />
        <RadioButton
            android:id="@+id/favorite_type_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_type_3" />
        <RadioButton
            android:id="@+id/favorite_type_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_type_4" />
    </RadioGroup>
    <LinearLayout
        android:id="@+id/rating_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/ratingBarStyle"
            android:stepSize="0.5" />
        <ImageButton
            android:id="@+id/reset_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="12dp"
            android:background="@color/transparent"
            android:src="@mipmap/ic_remove_circle_outline_black_24dp" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag_input"/>
    <me.gujun.android.taggroup.TagGroup
        android:id="@+id/tag_group"
        android:layout_marginTop="8dp"
        style="@style/TagGroup"
        app:atg_isAppendMode="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/user_tags"/>
    <me.gujun.android.taggroup.TagGroup
        android:id="@+id/user_tags"
        android:layout_marginTop="8dp"
        style="@style/TagGroup"/>
</LinearLayout>