<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.saoju.dramatown.DramaFavoriteReviewActivity">

    <ProgressBar android:id="@+id/progress_bar" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <RadioGroup
                android:id="@+id/favorite_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="4dp">
                <RadioButton
                    android:id="@+id/favorite_type_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite_type_0" />
                <RadioButton
                    android:id="@+id/favorite_type_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite_type_1" />
                <RadioButton
                    android:id="@+id/favorite_type_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite_type_2"
                    android:checked="true" />
                <RadioButton
                    android:id="@+id/favorite_type_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite_type_3" />
                <RadioButton
                    android:id="@+id/favorite_type_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite_type_4" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/rating_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">
                <RatingBar
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/ratingBarStyle"
                    android:stepSize="0.5" />
                <ImageButton
                    android:id="@+id/reset_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/transparent"
                    android:contentDescription="@string/reset"
                    android:src="@mipmap/ic_remove_circle_outline_black_24dp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_input"/>
            <me.gujun.android.taggroup.TagGroup
                android:id="@+id/tag_group"
                android:layout_marginTop="8dp"
                style="@style/TagGroup"
                app:atg_isAppendMode="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/user_tags"/>
            <me.gujun.android.taggroup.TagGroup
                android:id="@+id/user_tags"
                android:layout_marginTop="8dp"
                style="@style/TagGroup"/>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginTop="8dp">

                <EditText android:id="@+id/title" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/write_review_title"
                    android:maxLines="1" android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/content" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/write_review_content"
                    android:singleLine="false" />

            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/save_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_save"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>

